working on email verification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,34 @@
 spring.application.name=backend
 
-## DB configurations
+## --------------------DB configurations--------------------------
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:4306/dishcovery
 spring.datasource.username=root
 spring.datasource.password=
 
-## hibernate configuration
+## ----------------------------hibernate configuration-----------------
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
+
+
+## --activate local application.properties
+spring.profiles.active=local
+
+## -------------------Mail configuration---------------
+## mail sender
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=jonjina7@gmail.com
+## To generate Password For mail
+## Go to myaccount.google.com/apppasswords
+## provide a appname and generate
+## paste and remove spaces
+spring.mail.password=czfmfaietmwpngwa
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 
 spring.security.user.name=ram
