--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,12 +20,12 @@ spring.profiles.active=local
 ## mail sender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=jonjina7@gmail.com
+spring.mail.username=${MAIL_USERNAME}
 ## To generate Password For mail
 ## Go to myaccount.google.com/apppasswords
 ## provide a appname and generate
 ## paste and remove spaces
-spring.mail.password=czfmfaietmwpngwa
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
