--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 ## ------- dir to store videos -------
 files.video=videos/
+file.hls_videos=videosHLS/
 
 
 ## ------- set the video or file size --------
