--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,5 @@ build/
 
 ### local application.properties
 src/main/resources/application-local.properties
-videos/
-videosHLS/
+/videos/
+/videosHLS/
