--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,8 @@ spring.servlet.multipart.max-request-size=1000MB
 
 spring.security.user.name=ram
 spring.security.user.password=r@123
+
+
+## ---------JWT Secrets ----------------------
+security.jwt.secret-key=${SECURITY_JWT_SECRET_KEY}
+security.jwt.expiration-time=${SECURITY_JWT_EXPIRATION_TIME}
