--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,5 +43,5 @@ spring.security.user.password=r@123
 
 
 ## ---------JWT Secrets ----------------------
-security.jwt.secret-key=${SECURITY_JWT_SECRET_KEY}
-security.jwt.expiration-time=${SECURITY_JWT_EXPIRATION_TIME}
+jwt.refresh.token.expiry.ms=86400000 
+
