working on payment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=backend
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:4306/dishcovery
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 ## ----------------------------hibernate configuration-----------------
 spring.jpa.hibernate.ddl-auto=update
@@ -43,5 +43,11 @@ spring.security.user.password=r@123
 
 
 ## ---------JWT Secrets ----------------------
-jwt.refresh.token.expiry.ms=86400000 
+jwt.refresh.token.expiry.ms=86400000
+
+### -------- Payments methods ---------------
+esewa.merchantId=EPAYTEST
+esewa.secretKey=8gBm/:&EnhH.1/q
+esewa.paymentUrl=https://uat.esewa.com.np/epay/main
+esewa.verifyUrl=https://uat.esewa.com.np/epay/transrec
 
