--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=backend
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:4306/dishcovery
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 ## ----------------------------hibernate configuration-----------------
 spring.jpa.hibernate.ddl-auto=update
