pending: chat feature implementing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,13 +33,16 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 files.video=videos/
 file.hls_videos=videosHLS/
 
+## --------dir to store chat files ------------
+file.chat.files=chat_files/
+
 
 ## ------- set the video or file size --------
 spring.servlet.multipart.max-file-size=1000MB
 spring.servlet.multipart.max-request-size=1000MB
 
-spring.security.user.name=ram
-spring.security.user.password=r@123
+spring.security.owner.name=ram
+spring.security.owner.password=r@123
 
 
 ## ---------JWT Secrets ----------------------
