--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,9 @@ file.hls_videos=videosHLS/
 ## --------dir to store chat files ------------
 file.chat.files=chat_files/
 
+## -------- user profile------
+file.user.profile=profile_pictures
+
 
 ## ------- set the video or file size --------
 spring.servlet.multipart.max-file-size=1000MB
