new: ad implemented with subscription

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,9 @@ file.chat.files=chat_files/
 ## -------- user profile------
 file.user.profile=profile_pictures
 
+## ---------Ad directories------
+file.ad.path=ads/
+
 
 ## ------- set the video or file size --------
 spring.servlet.multipart.max-file-size=1000MB
